--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
             <main class="main">
                 <div class="location">
                     <i class="fa-solid fa-location-dot"></i>
-                    <input class="location__name" type="text" id="location" name="location" placeholder="Paris, Belleville"/>
+                    <input class="location__name" type="text" id="location" name="location" placeholder="Paris, Belleville">
                 </div>
 
                 <section class="section section__booking">
                     <h1 class="booking--title">Réservez le menu qui vous convient</h1>
                     <p class="booking--description">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-                    <button class="booking--button">
-                        <a class="booking--button__link" href="#restaurants-id">
-                            Explorer nos restaurants
-                        </a>
-                    </button>
+                    <a class="booking--button__link" href="#restaurants-id">
+                        Explorer nos restaurants  
+                    </a>
                 </section>
 
                 <section class="section section__functioning">
@@ -78,25 +76,27 @@
                                         <img class="card__figure--img" src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                                         <span class="card__figure--tag">Nouveau</span>
                                     </div>
-                                    <div class="restaurants--card__description">
+                                </a>
+                                <div class="restaurants--card__description">
+                                    <a href="restaurants/lapalettedugout.html" class="restaurants--card__link">
                                         <div class="card__description--text">
                                             <h3 class="card__title">La palette du goût</h3>
                                             <p class="card__subtitle">Ménilmontant</p>
                                         </div>
-                                        <input type="checkbox" class="heart-checkbox" id="heartCheckbox1">
-                                        <label for="heartCheckbox1">
-                                            <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
-                                                <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
-                                                <defs>
-                                                    <linearGradient id="paint0_linear_148695_527" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
-                                                    <stop stop-color="#9356DC"/>
-                                                    <stop offset="1" stop-color="#FF79DA"/>
-                                                    </linearGradient>
-                                                </defs> 
-                                            </svg>
-                                        </label>
-                                    </div>
-                                </a>
+                                    </a>
+                                    <input type="checkbox" class="heart-checkbox" id="heartCheckbox1">
+                                    <label for="heartCheckbox1">
+                                        <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
+                                            <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
+                                            <defs>
+                                                <linearGradient id="paint0_linear_148695_5271" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
+                                                <stop offset="0" stop-color="#9356DC"/>
+                                                <stop offset="1" stop-color="#FF79DA"/>
+                                                </linearGradient>
+                                            </defs> 
+                                        </svg>
+                                    </label>
+                                </div>
                             </article>
 
                             <article class="cards">
@@ -105,25 +105,27 @@
                                         <img class="card__figure--img" src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                                         <span class="card__figure--tag">Nouveau</span>
                                     </div>
-                                    <div class="restaurants--card__description">
+                                </a>
+                                <div class="restaurants--card__description">
+                                    <a href="restaurants/lanoteenchantee.html" class="restaurants--card__link">
                                         <div class="card__description--text">
                                             <h3 class="card__title">La note enchantée</h3>
                                             <p class="card__subtitle">Charonne</p>
                                         </div>
-                                        <input type="checkbox" class="heart-checkbox" id="heartCheckbox2">
-                                        <label for="heartCheckbox2">
-                                            <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
-                                                <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
-                                                <defs>
-                                                    <linearGradient id="paint0_linear_148695_527" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
-                                                    <stop stop-color="#9356DC"/>
-                                                    <stop offset="1" stop-color="#FF79DA"/>
-                                                    </linearGradient>
-                                                </defs> 
-                                            </svg>
-                                        </label>
-                                    </div>
-                                </a>
+                                    </a>
+                                    <input type="checkbox" class="heart-checkbox" id="heartCheckbox2">
+                                    <label for="heartCheckbox2">
+                                        <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
+                                            <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
+                                            <defs>
+                                                <linearGradient id="paint0_linear_148695_5272" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
+                                                <stop offset="0" stop-color="#9356DC"/>
+                                                <stop offset="1" stop-color="#FF79DA"/>
+                                                </linearGradient>
+                                            </defs> 
+                                        </svg>
+                                    </label>
+                                </div>
                             </article>
 
                             <article class="cards">
@@ -131,25 +133,27 @@
                                     <div class="restaurants--card__figure">
                                         <img class="card__figure--img" src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                                     </div>
-                                    <div class="restaurants--card__description">
+                                </a>
+                                <div class="restaurants--card__description">
+                                    <a href="restaurants/alafrancaise.html" class="restaurants--card__link">
                                         <div class="card__description--text">
                                             <h3 class="card__title">À la française</h3>
                                             <p class="card__subtitle">Cité Rouge</p>
                                         </div>
-                                        <input type="checkbox" class="heart-checkbox" id="heartCheckbox3">
-                                        <label for="heartCheckbox3">
-                                            <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
-                                                <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
-                                                <defs>
-                                                    <linearGradient id="paint0_linear_148695_527" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
-                                                    <stop stop-color="#9356DC"/>
-                                                    <stop offset="1" stop-color="#FF79DA"/>
-                                                    </linearGradient>
-                                                </defs> 
-                                            </svg>
-                                        </label>
-                                    </div>
-                                </a>
+                                    </a>
+                                    <input type="checkbox" class="heart-checkbox" id="heartCheckbox3">
+                                    <label for="heartCheckbox3">
+                                        <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
+                                            <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
+                                            <defs>
+                                                <linearGradient id="paint0_linear_148695_5273" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
+                                                <stop offset="0" stop-color="#9356DC"/>
+                                                <stop offset="1" stop-color="#FF79DA"/>
+                                                </linearGradient>
+                                            </defs> 
+                                        </svg>
+                                    </label>
+                                </div>
                             </article>
 
                             <article class="cards">
@@ -157,25 +161,27 @@
                                     <div class="restaurants--card__figure">
                                         <img class="card__figure--img" src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                                     </div>
-                                    <div class="restaurants--card__description">
+                                </a>
+                                <div class="restaurants--card__description">
+                                    <a href="restaurants/ledelicedessens.html" class="restaurants--card__link">
                                         <div class="card__description--text">
                                             <h3 class="card__title">Le délice des sens</h3>
                                             <p class="card__subtitle">Folie-Méricourt</p>
                                         </div>
-                                        <input type="checkbox" class="heart-checkbox" id="heartCheckbox4">
-                                        <label for="heartCheckbox4">
-                                            <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
-                                                <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
-                                                <defs>
-                                                    <linearGradient id="paint0_linear_148695_527" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
-                                                    <stop stop-color="#9356DC"/>
-                                                    <stop offset="1" stop-color="#FF79DA"/>
-                                                    </linearGradient>
-                                                </defs> 
-                                            </svg>
-                                        </label>
-                                    </div>
-                                </a>
+                                    </a>
+                                    <input type="checkbox" class="heart-checkbox" id="heartCheckbox4">
+                                    <label for="heartCheckbox4">
+                                        <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
+                                            <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
+                                            <defs>
+                                                <linearGradient id="paint0_linear_148695_5274" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
+                                                <stop offset="0" stop-color="#9356DC"/>
+                                                <stop offset="1" stop-color="#FF79DA"/>
+                                                </linearGradient>
+                                            </defs> 
+                                        </svg>
+                                    </label>
+                                </div>
                             </article>
                         </div>
                     </div>
