--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -33,7 +33,7 @@
 
             <main class="main">
                 <div class="banner">
-                    <img class="banner__img" src="../assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                    <img class="banner__img" src="../assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="alafrancaise">
                 </div>
 
                 <div class="menu">
