--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -33,7 +33,7 @@
 
             <main class="main">
                 <div class="banner">
-                    <img class="banner__img" src="../assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                    <img class="banner__img" src="../assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="lanoteenchantee">
                 </div>
 
                 <div class="menu">
